feat(install-service): ✨ 重构安装服务模块并优化安装步骤管理
重构安装服务模块，将InstallStepDto改为不可变record类型InstallStepDTO
新增InstallStepVO用于前端展示，包含更多显示信息
添加InstallStepConverter实现DTO/VO间转换
实现InstallService接口扩展CRUD操作
优化主机安装流程日志和错误处理

该重构提升了代码清晰度和维护性，同时为前端提供更丰富的数据展示

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>